# IFJ

./: .gitignore  CMakeLists.txt  Makefile  README.md  TODO.md  out.txt  output.txt  rozdeleni
examples/: circle.src  concat_test  example3.src  example_basic.src  example_def.src  example_fn.src  example_fn_def.src  example_if.src  example_if_basic.src  example_simple.src  example_while.src  factorial.src  fuck.src  func.src  indent_test.src  run_tests.py  simple_af_expression.src  test_input.src
examples/good/: example1.src  example11.src  example15.src  example2.src  example24.src  example3.src  example7.src
examples/gooooood/: example1.src  example3.src
examples/ifjcode/: print.src
examples/not_good/: example10.src  example12.src  example14.src  example16.src  example17.src  example18.src  example19.src  example20.src  example23.src  example25.src  example28.src  example4.src  example5.src  example6.src  example8.src  example9.src
examples/not_goooood/: example13.src  example21.src  example22.src  example26.src  example27.src
examples/output/: example1.src.err  example1.src.output  example_simple.src.output
src/: IFJ  Makefile  astnode.c  astnode.h  code_gen.c  code_gen.h  error.c  error.h  ifj  indent_stack.c  indent_stack.h  keywords.c  keywords.h  lex_analyzer.c  lex_analyzer.h  main.c  ptr_list.c  ptr_list.h  semantic_analyzer.c  semantic_analyzer.h  stack.c  stack.h  symtable.c  symtable.h  syntax_analyzer.c  syntax_analyzer.h  syntax_stack.c  syntax_stack.h  test.c  test.h  tokens.c  tokens.h
tools/: ic19int  is_it_ok.sh
(+7 files in other folders)
